--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>SO<span>THEA</span></h1>
         </div>
         <div class="download-cv">
-            <a href="#" download="#">Download</a>
+            <a href="#" download="#">Download CV</a>
         </div>
     </nav>
     <div class="card">
@@ -47,7 +47,7 @@
 
         </div>
     </div>
-    <div class="back"></div>
+    <!-- <div class="back"></div> -->
 </body>
 
 </html>
